kubernetes-docs/0.manifests/ingress-nginx/nginx-404.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-404
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-404
  template:
    metadata:
      labels:
        app: custom-404
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
        resources:
          limits:
             memory: 100Mi
             cpu: 100m
          requests:
            memory: 100Mi
            cpu: 100m
      volumes:
      - name: html
        configMap:
          name: custom-404-html
---
apiVersion: v1
kind: Service
metadata:
  name: custom-404
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30810
  selector:
    app: custom-404

# k patch daemonset ingress-nginx-controller -n ingress-nginx \
#   --type='json' -p='[{"op": "add", "path": "/spec/template/spec/containers/0/args/-", "value":"--default-backend-service=ingress-nginx/custom-404"}]'

# kubectl rollout restart daemonset ingress-nginx-controller -n ingress-nginx
