kubernetes-docs/0.manifests/ingress-nginx/default-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: landing-page
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
        resources:
          limits:
             memory: 100Mi
             cpu: 100m
          requests:
            memory: 100Mi
            cpu: 100m
      volumes:
      - name: landing-page
        configMap:
          name: landing-page
---
apiVersion: v1
kind: Service
metadata:
  name: landing-page
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30811
  selector:
    app: landing-page

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-test.f88.co
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: landing-page
            port:
              number: 80
